# gps_cot_sender

./: Cargo.toml  README.md  boat_sm.b64
.github/workflows/: release.yml  rust.yml
src/: main.rs
