[package]
name = "cot_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7.10", features = ["full"] }
chrono = "0.4.37"
gpsd_proto = "1.0.0"
env_logger = "0.11.3"
